# gb_flask

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  wsgi.py  wsgi_prod.py
blog/: admin.py  app.py  config.py  configs.py  security.py
blog/api/: __init__.py  article.py  author.py  tag.py  user.py
blog/forms/: article.py  user.py
blog/models/: __init__.py  article.py  article_tag.py  author.py  database.py  tag.py  user.py
blog/permissions/: user.py
blog/schemas/: __init__.py  article.py  author.py  tag.py  user.py
blog/templates/: base.html  index.html
blog/templates/admin/: index.html
blog/templates/articles/: create.html  details.html  list.html
blog/templates/auth/: login.html  register.html
blog/templates/authors/: list.html
blog/templates/macro/: formhelpers.html
blog/templates/users/: details.html  list.html
blog/views/: articles.py  auth.py  authors.py  users.py
migrations/versions/: 02d6e8fc845f_update_user_model.py  20eb1da3b2f3_update_user_model.py  31e6e29a55cc_add_tags2article.py  5b1736547fc2_update_user_model.py  7f3dfec03edb_.py  95a2ec0bf668_create_user_model.py  a0da8ac02a08_update_user_model.py  a5fb550f8e98_update_user_model.py
