[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yuliya Bryukhovskikh", email = "makutu@ereb.ru"},
]
dependencies = [
    "Flask-Login==0.5.0",
    "Flask==1.1.4",
    "Flask-SQLAlchemy==2.5.1",
    "Werkzeug==0.16.1",
    "Jinja2==2.11.3",
    "markupsafe==2.0.1",
    "SQLAlchemy==1.3.24",
    "Flask-Migrate>=4.0.4",
    "psycopg2>=2.9.6",
    "psycopg2-binary>=2.9.6",
]
requires-python = "~=3.9"
license = {text = "MIT"}
