[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yuliya Bryukhovskikh", email = "makutu@ereb.ru"},
]
dependencies = [
    "Flask-Login==0.5.0",
    "Flask==1.1.4",
    "Flask-SQLAlchemy==2.5.1",
    "Werkzeug==0.16.1",
    "Jinja2==2.11.3",
    "markupsafe==2.0.1",
    "SQLAlchemy==1.3.24",
    "Flask-Migrate>=4.0.4",
    "Bcrypt-Flask>=1.0.2",
    "psycopg2>=2.9.6",
    "WTForms>=3.0.1",
    "email-validator>=2.0.0.post2",
]
requires-python = "~=3.9"
license = {text = "MIT"}
